app.txt
szczkr@DIU-01:~$ g++ programtest23.cpp -O3 -lpqxx -lpq && ./a.out
programtest23.cpp: In function ‘int main()’:
programtest23.cpp:1168:14: error: expected ‘}’ at end of input
 1168 |     return 0;
      |              ^
programtest23.cpp:1029:1: note: to match this ‘{’
 1029 | {
      | ^
